--- a/index.html
+++ b/index.html
@@ -70,22 +70,42 @@
         </div>
 
         <h2>Choix Crudités 🥬</h2>
-        <div id="condiment-container">
+        <div id="vegetable-container">
           <label
             ><input type="checkbox" name="condiment" value="salade" />
             <span>Salade</span>
           </label>
           <label
-            ><input type="checkbox" name="condiment" value="oignon" />
+            ><input type="checkbox" name="vegetable" value="oignon" />
             <span>Oignon</span>
           </label>
           <label
-            ><input type="checkbox" name="condiment" value="tomate" />
+            ><input type="checkbox" name="vegetable" value="tomate" />
             <span>Tomate</span>
           </label>
           <label
-            ><input type="checkbox" name="condiment" value="poivron" />
+            ><input type="checkbox" name="vegetable" value="poivron" />
             <span> Poivron </span>
+          </label>
+        </div>
+
+        <h2>Choix Condiment 🍳 🫒</h2>
+        <div id="condiment-container">
+          <label
+            ><input type="checkbox" name="condiment" value="oeuf" />
+            <span>Oeuf</span>
+          </label>
+          <label
+            ><input type="checkbox" name="condiment" value="olives" />
+            <span>Olives</span>
+          </label>
+          <label
+            ><input type="checkbox" name="condiment" value="cornichon" />
+            <span>Cornichon</span>
+          </label>
+          <label
+            ><input type="checkbox" name="condiment" value="piment" />
+            <span> Piment </span>
           </label>
         </div>
 
